Bug 1702770 - Make the gap between the urlbar edge and the identity-box more uniform. r=desktop-theme-reviewers,dao a=pascalc
Differential Revision: https://phabricator.services.mozilla.com/D113762

--- a/browser/themes/shared/identity-block/identity-block.inc.css
+++ b/browser/themes/shared/identity-block/identity-block.inc.css
@@ -81,13 +81,12 @@
 
 .identity-box-button {
   padding-inline: var(--urlbar-icon-padding);
-  border-radius: var(--toolbarbutton-border-radius);
+  border-radius: var(--urlbar-icon-border-radius);
 }
 
 @media not (-moz-proton) {
 .identity-box-button {
   padding-inline: calc(var(--urlbar-icon-padding) / 2);
-  border-radius: 0;
 }
 
 #identity-box:not(.chromeUI, .extensionPage, .notSecureText) {
@@ -118,7 +117,7 @@
 #identity-box[pageproxystate="valid"].extensionPage > .identity-box-button,
 #urlbar-label-box {
   padding-inline: 8px;
-  border-radius: var(--toolbarbutton-border-radius);
+  border-radius: var(--urlbar-icon-border-radius);
 }
 
 @media (-moz-proton) {
@@ -168,13 +167,11 @@
 #identity-box[pageproxystate="valid"].chromeUI > #identity-icon-box,
 #identity-box[pageproxystate="valid"].extensionPage > #identity-icon-box {
   padding-inline: 8px;
-  border-radius: 0;
 }
 
 #urlbar-label-box {
   padding-inline: 4px;
   border-inline-start: 1px solid var(--autocomplete-popup-separator-color);
-  border-radius: 0;
 }
 
 #urlbar[searchmode]:not([breakout-extend]) > #urlbar-input-container > #urlbar-label-box {
@@ -329,14 +326,13 @@
 
 #tracking-protection-icon-container {
   padding-inline: var(--urlbar-icon-padding);
-  border-radius: var(--toolbarbutton-border-radius);
+  border-radius: var(--urlbar-icon-border-radius);
   /* This is needed in order to position the blue dot indicator. */
   position: relative;
 }
 
 @media not (-moz-proton) {
 #tracking-protection-icon-container {
-  border-radius: 0;
   /* Separator */
   border-inline-end: 1px solid var(--autocomplete-popup-separator-color);
   border-image: linear-gradient(transparent 15%, var(--autocomplete-popup-separator-color) 15%, var(--autocomplete-popup-separator-color) 85%, transparent 85%);
